[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["darkwolf <darkwolf1990janary@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet-code"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
